# personal-website

./: Cargo.toml  index.html  tailwind.config.js
src/: app.rs  main.rs
style/: output.css
