[package]
name = "personal-website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
leptos = { version = "0.5.4", features = ["csr", "nightly"] }
leptos-use = "0.10.9"
leptos_meta = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_router = { version = "0.5.4", features = ["csr", "nightly"] }
leptos_theme = "0.1.2"
log = "0.4.21"
